--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script type="text/javascript" src="main.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Biryani&display=swap" rel="stylesheet">
+}
 </head>
 
 <body>
@@ -11,9 +13,9 @@
       <nav>
         <img class="logo" src="assets/icons/elephant.svg">
         <div class="nav-icons">
-          <li><img class="icons" src="assets/icons/dashboard.svg"></li>
-          <li><img class="icons" src="assets/icons/transactions.svg"></li>
-          <li><img class="icons" src="assets/icons/profile.svg"></li>
+          <li><button class = "nav-button"><img class="icons" src="assets/icons/dashboard.svg"></button></li>
+          <li><button class = "nav-button"><img class="icons" src="assets/icons/transactions.svg"></button></li>
+          <li><button class = "nav-button"><img class="icons" src="assets/icons/profile.svg"></button></li>
         </div>
       </nav>
 
@@ -21,94 +23,95 @@
 
       <div class="popup">
         <h3> Welcome, Oscar! </h3>
+        <button class = "close"><img class="x" src="assets/icons/close.svg"></button>
       </div>
       <div class="main-three">
-        <button class="a">Income<br>$2,119,12</button>
-        <button class="a">Expenses<br>$420.54</button>
-        <button class="a">Credit Score<br>673</button>
+        <button class="a">INCOME<div class="money">$2,119,12</div></button>
+        <button class="a expenses">EXPENSES<div class="money">$420.54</div></button>
+        <button class="a">CREDIT SCORE<div class="money">673</div></button>
       </div>
 
       <div class="h2a">
         <h2>Accounts</h2>
-        <button class="b">Manage Accounts</button>
+        <button class="b">MANAGE ACCOUNTS</button>
       </div>
 <br>
-  <div class="accounts-buttons">
-      <button class="accounts">Wells Fargo Checking</button>
-      <button class="accounts">Wells Fargo Savings</button>
-      <button class="accounts">Amazon Credit Credit Card</button>
-      <button class="accounts">Southwest Credit Credit Card</button>
+  <div class="accounts-buttons-box">
+      <button class="accounts"><table class="button-table"><td><img class="icons2" src="assets/icons/checking.svg"></td><td>Wells Fargo</td><td>Checking</td></table></button>
+      <button class="accounts"><table class="button-table"><td><img class="icons2" src="assets/icons/savings.svg"></td><td>Wells Fargo</td><td>Savings</td></table></button>
+      <button class="accounts"><table class="button-table"><td><img class="icons2" src="assets/icons/credit-card.svg"></td><td>Amazon Credit</td><td>Credit Card</td></table></button>
+      <button class="accounts"><table class="button-table"><td><img class="icons2" src="assets/icons/credit-card.svg"></td><td>Southwest Credit</td><td>Credit Card</td></table></button>
   </div>
     </div>
 
     <div class="column-r">
-      <div>
-        <h2>Recent Transactions</h2>
+      <div class="white-block">
+        <h2 class="recent">Recent Transactions</h2>
 
-        <button class="b">View Transactions</button>
-
-        <table style="width:100%">
-          <tr>
-            <th>Date</th>
-            <th>Payee</th>
-            <th>Inflow</th>
-            <th>Outflow</th>
-          </tr>
-          <tr>
-            <td>Oct 25, 2019</td>
-            <td>Target</td>
-            <td>-</td>
-            <td>$82.35</td>
-          </tr>
-          <tr>
-            <td>Oct 24, 2019</td>
-            <td>Express</td>
-            <td>-</td>
-            <td>$212.24</td>
-          </tr>
-          <tr>
-            <td>Oct 22, 2019</td>
-            <td>Paycheck</td>
-            <td>$1,319.12</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Oct 21, 2019</td>
-            <td>Trader Joe's</td>
-            <td>-</td>
-            <td>$54.92</td>
-          </tr>
-          <tr>
-            <td>Oct 20, 2019</td>
-            <td>Shell</td>
-            <td>-</td>
-            <td>$46.23</td>
-          </tr>
-          <tr>
-            <td>Oct 19, 2019</td>
-            <td>Rent</td>
-            <td>$800.00</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Oct 19, 2019</td>
-            <td>Hapa Sushi</td>
-            <td>-</td>
-            <td>$13.97</td>
-          </tr>
-          <tr>
-            <td>Oct 18, 2019</td>
-            <td>Pig Train</td>
-            <td>-</td>
-            <td>$4.83</td>
-          </tr>
-          <tr>
-            <td>Oct 18, 2019</td>
-            <td>RTD</td>
-            <td>-</td>
-            <td>$6.00</td>
-          </tr>
+        <button class="c">NEW TRANSACTIONS</button>
+            <table class="transactions" style="width:100%">
+              <tr>
+                <th>Date</th>
+                <th>Payee</th>
+                <th>Inflow</th>
+                <th>Outflow</th>
+              </tr>
+              <tr>
+                <td>Oct 25, 2019</td>
+                <td>Target</td>
+                <td>-</td>
+                <td>$82.35</td>
+              </tr>
+              <tr>
+                <td>Oct 24, 2019</td>
+                <td>Express</td>
+                <td>-</td>
+                <td>$212.24</td>
+              </tr>
+              <tr>
+                <td>Oct 22, 2019</td>
+                <td>Paycheck</td>
+                <td>$1,319.12</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Oct 21, 2019</td>
+                <td>Trader Joe's</td>
+                <td>-</td>
+                <td>$54.92</td>
+              </tr>
+              <tr>
+                <td>Oct 20, 2019</td>
+                <td>Shell</td>
+                <td>-</td>
+                <td>$46.23</td>
+              </tr>
+              <tr>
+                <td>Oct 19, 2019</td>
+                <td>Rent</td>
+                <td>$800.00</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Oct 19, 2019</td>
+                <td>Hapa Sushi</td>
+                <td>-</td>
+                <td>$13.97</td>
+              </tr>
+              <tr>
+                <td>Oct 18, 2019</td>
+                <td>Pig Train</td>
+                <td>-</td>
+                <td>$4.83</td>
+              </tr>
+              <tr>
+                <td>Oct 18, 2019</td>
+                <td>RTD</td>
+                <td>-</td>
+                <td>$6.00</td>
+              </tr>
+            </table>
+          </div>
       </div>
-    </div>
 
 </body>
