Update semantic naming for accessibility

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <li><button class="nav-button"><img class="icons profile" src="assets/icons/profile.svg" alt="profile icon"></button></li>
     </div>
   </nav>
-  <main class="home">
+  <main class="profile">
     <div class="column-l">
       <h1> Balancing Act </h1>
       <div class="popup">
         <h3> Welcome, Oscar! </h3>
-        <button class="close"><img class="x" src="assets/icons/close.svg"></button>
+        <button class="close"><img class="x" src="assets/icons/close.svg" alt="close button icon"></button>
       </div>
-      <div class="main-three">
+      <div class="income-expenses-credit-score">
         <button class="a">INCOME<div class="numbers">$2,119,12</div></button>
         <button class="a expenses">EXPENSES<div class="numbers">$420.54</div></button>
         <button class="a">CREDIT SCORE<div class="numbers">673</div></button>
@@ -112,12 +112,12 @@
   <section class="transactions-page">
     <div class="column-l">
       <span id="transactions-page-header">
-      <h1>Transactions</h1>
-      <span class="transactions-buttons-span">
-        <button class="transactions-buttons-top">All</button>
-        <button class="transactions-buttons-top">Inflow</button>
-        <button class="transactions-buttons-top">Outflow</button>
-      </span>
+        <h1>Transactions</h1>
+        <span class="transactions-buttons-span">
+          <button class="transactions-buttons-top">All</button>
+          <button class="transactions-buttons-top">Inflow</button>
+          <button class="transactions-buttons-top">Outflow</button>
+        </span>
       </span>
       <div id="transactions-table-box">
         <div class="table-row" id="table-first-row">
@@ -229,18 +229,18 @@
     </div>
     <div class="column-r">
       <div id="new-transaction-box">
-          <h2 id="new-transactions-header">New Transaction</h>
+        <h2 id="new-transactions-header">New Transaction</h>
           <p>Type of Transaction:</p>
           <select name="type">
-              <option value="type">Expense</option>
+            <option value="type">Expense</option>
           </select>
           <p>Category:</p>
           <select name="category">
-              <option value="select-one">- Select One -</option>
+            <option value="select-one">- Select One -</option>
           </select>
           <p>Account from:</p>
           <select name="account-from">
-              <option value="select-one">- Select One -</option>
+            <option value="select-one">- Select One -</option>
           </select>
           <p>Payee:</p>
           <input name="payee" type="text"></input>
