Fix naming mixup between home and profile classes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><button class="nav-button"><img class="icons profile" src="assets/icons/profile.svg" alt="profile icon"></button></li>
     </div>
   </nav>
-  <main class="profile">
+  <main class="home">
     <div class="column-l">
       <h1> Balancing Act </h1>
       <div class="popup">
