--- a/index.html
+++ b/index.html
@@ -232,15 +232,25 @@
         <h2 id="new-transactions-header">New Transaction</h>
           <p>Type of Transaction:</p>
           <select name="type">
-            <option value="type">Expense</option>
+            <option value="select-one">- Select One -</option>
+            <option value="type">Inflow</option>
+            <option value="type">Outflow</option>
           </select>
           <p>Category:</p>
           <select name="category">
             <option value="select-one">- Select One -</option>
+            <option value="select-one">Groceries</option>
+            <option value="select-one">Bills</option>
+            <option value="select-one">Fun Money</option>
+            <option value="select-one">Paycheck</option>
           </select>
           <p>Account from:</p>
           <select name="account-from">
             <option value="select-one">- Select One -</option>
+            <option value="select-one">Wells Fargo Checking</option>
+            <option value="select-one">Wells Fargo Savings</option>
+            <option value="select-one">Amazon Credit</option>
+            <option value="select-one">Southwest Credit</option>
           </select>
           <p>Payee:</p>
           <input name="payee" type="text"></input>
@@ -251,6 +261,46 @@
           <button id="log-expense">Log Expense</button>
       </div>
     </div>
+  </section>
+  <section class="prof-page">
+      <div class="profile-page-left">
+          <h2 class="your-profile">Your Profile</h2>
+        <div class="profile-page-box-left">
+          <h3 class="profile-page-name">Oscar Holt</h3>
+          <p class="member-info">Denver, CO</p>
+          <p class="member-info">Member Since: 2014</p>
+          <p class="member-info">Birthday: December 19</p>
+          <button class="edit-my-info">EDIT MY INFO</button>
+        </div>
+      </div>
+      <div class="profile-page-right">
+        <h2 class="your-accounts">Your Accounts</h2>
+        <div class="your-accounts-items"><span class="your-account-company-span"><p>Wells Fargo</p></span><span class="your-account-type-span"><p>Savings</p></span><span class="your-account-status-span"><p class="status-p">Status:<p class="green"> Active</p></p></span><span><button class="edit">EDIT</button><button class="delete">DELETE</button></span></div>
+        <div class="your-accounts-items"><span class="your-account-company-span"><p>Wells Fargo</p></span><span class="your-account-type-span"><p>Checking</p></span><span class="your-account-status-span"><p class="status-p">Status:<p class="green"> Active</p></p></span><span><button class="edit">EDIT</button><button class="delete">DELETE</button></span></div>
+        <div class="your-accounts-items"><span class="your-account-company-span"><p>Amazon Credit</p></span><span class="your-account-type-span"><p>Credit Card</p></span><span class="your-account-status-span"><p class="status-p">Status:<p class="green"> Active</p></p></span><span><button class="edit">EDIT</button><button class="delete">DELETE</button></span></div>
+        <div class="your-accounts-items"><span class="your-account-company-span"><p>Southwest Credit</p></span><span class="your-account-type-span"><p>Credit Card</p></span><span class="your-account-status-span"><p class="status-p">Status:<p class="green"> Active</p></p></span><span><button class="edit">EDIT</button><button class="delete">DELETE</button></span></div>
+        <div class="add-an-account">
+            <h3 class="add-an-account-header">Add an Account</h3>
+            <span class="add-an-account-form-span">
+              <label class="account-form-label" for="add-account-type-input">Type:
+              <input class="add-account-input" name="add-account-type-input" type="text">
+            </span>
+            <span class="add-an-account-form-span">
+              <label class="account-form-label" for="add-account-nickname-input">Nickname:
+              <input class="add-account-input" name="add-account-nickname-input" type="text">
+            </span>
+            <span class="add-an-account-status-span">
+              <label class="account-form-label status" for="add-account-status">Status:
+              <select class="add-account-status-dropdown" name="add-account-status-dropdown">
+                <option value="active">Active</option>
+                <option value="inactive">Inactive</option>
+              </select>
+            </span>
+            <span class="add-an-account-button-span">
+              <button class="add-an-account-button">ADD ACCOUNT</button>
+            </span>
+        </div>
+      </div>
   </section>
 </body>
 <script type="text/javascript" src="main.js"></script>
